apps/multilang-python/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multilang-python
  namespace: dev
  labels:
    backstage.io/kubernetes-id: multilang-python
spec:
  selector:
    app: multilang-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
