apps/multilang-python/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multilang-python
  namespace: dev
  labels:
    backstage.io/kubernetes-id: multilang-python
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /multilang-python-dev
            pathType: Prefix
            backend:
              service:
                name: multilang-python
                port:
                  number: 80
